[package]
name = "teatime"
version = "0.2.0"
edition = "2021"

[lib]

[dependencies]
base64 = "0.22.1"
build-it = "0.1.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_urlencoded = "0.7.1"
teatime-macros = { path = "./teatime-macros" }

[dev-dependencies]
testcontainers = "0.20.1"
tokio = { version = "1.38.1", features = ["macros"] }
