[package]
name = "gitea-sdk"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "An unofficial Gitea API client"
repository = "https://github.com/benpueschel/teatime"
readme = "README.md"
authors = ["Ben Püschel"]
keywords = ["git", "gitea", "api", "client"]
categories = ["api-bindings"]

[lib]

[dependencies]
base64 = "0.22.1"
build-it = "0.1.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"

[dev-dependencies]
testcontainers = "0.20.1"
tokio = { version = "1.38.1", features = ["macros"] }
