[package]
name = "teatime-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for teatime"
license = "MIT"
repository = "https://github.com/benpueschel/teatime"
readme = "README.md"
authors = ["Ben Püschel"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.76", features = ["full"] }
